--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: NMTHEME
+Theme Name: NM_THEME
 Theme URI: http://bdsoftcreation.com/
 Author: Nishan M
 Author URI: https://bdsoftcreation.com/
