--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@ Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: nmbet
+Text Domain: nm_theme
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 */
-
-/* body{
-    background:pink;
-} */
