--- a/assets/src/style.css
+++ b/assets/src/style.css
@@ -1,5 +1,11 @@
 body{
-    background: pink;
+    max-width: 100%;
+    width: 100%;
+}
+
+img{
+    max-width: 100%;
+    height: auto;
 }
 
 .custom-logo{
