cart/login done

--- a/style.css
+++ b/style.css
@@ -17,3 +17,160 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
     width: 100%;
     height: auto;
 }
+
+/* Woocommerce */
+.nm-woo-container{
+	  max-width: 1200px;
+    margin: 0px auto;
+    padding: 20px;
+}
+
+table.cart th{
+	width: 33.33%;
+	font-size: 24px;
+	text-align: center;
+}
+
+.nm_table_title th{
+	padding-bottom: 30px !important;
+}
+
+.woocommerce table.shop_table, .woocommerce table.shop_table tr, .woocommerce table.shop_table td{
+	border: none;
+}
+
+.woocommerce table.shop_table td{
+	text-align: center;
+}
+
+table.cart th:first-child, .woocommerce table.shop_table td:first-child{
+	text-align: left;
+/* 	padding-left: 40px !important; */
+}
+
+table.cart img{
+	width: 200px !important;
+}
+
+.woocommerce a.remove{
+	  background: #532322;
+    color: #fff !important;
+    display: inline-block;
+    position: relative;
+    top: -95px !important;
+    left: -20px;
+    width: 30px;
+    height: 30px;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 400;
+}
+
+.woocommerce a.remove:hover{
+	background: #532322;
+	color: #fff !important;
+}
+
+.nm-product-name{
+	text-decoration: none;
+	color: #000;
+	font-size: 20px;
+}
+
+.nm-product-name:hover{
+	color: #000;
+}
+
+/* .product-quantity{
+	text-align: center;
+}
+.product-price{
+	text-align: right
+} */
+
+.quantity .qty_button{
+	border: none;
+	background: transparent;
+	font-size: 28px;
+}
+
+.quantity .qty{
+	border: none;
+	font-size: 26px;
+	width: 3em !important;
+}
+
+
+.product-price{
+	font-size: 18px;
+}
+.nm_cart_total_section{
+	width: 100%;
+}
+/* .nm_cart_total_area, .nm_coupon_area{
+	
+} */
+.nm_cart_total_area td, .nm_coupon_area td{
+	width: 33.33%;
+}
+
+.nm_cart_total_area td:last-child{
+	text-align: center;
+	font-size: 20px;
+	padding-left: 40px;
+}
+
+.nm_cart_total_area td:last-child .nm_total_text{
+	margin-right: 100px;
+	font-weight: 600;
+}
+
+.nm_cart_total_area button{
+	 background: #532322 !important;
+    color: #fff !important;
+    font-size: 20px !important;
+    font-weight: normal !important;
+    line-height: 20px !important;
+}
+
+.nm_coupon_title p{
+	font-size: 20px;
+	margin-bottom: 0px;
+}
+
+.nm_coupon_title p:last-child{
+	color: #aaa;
+}
+
+.coupon{
+	margin-top: 20px;
+}
+.coupon input{
+	border: 1px solid #aaa;
+	border-radius: 3px !important;
+	padding: 5px;
+	padding-left: 15px !important;
+	font-size: 16px;
+	height: 45px;
+	width: 70%;
+}
+
+.coupon button{
+	    background: #532322 !important;
+    color: #fff !important;
+    font-size: 20px !important;
+    font-weight: normal !important;
+    line-height: 20px !important;
+	padding-bottom: 14px !important;
+}
+
+.wc-proceed-to-checkout{
+	margin-top: 80px;
+}
+.checkout-button{
+	background: transparent !important;
+	color: #532322 !important;
+	font-size: 28px !important;
+}
+
+
